Add authentication components and routing; implement SignIn and SignUp pages

--- a/client/src/components/footer/footer.css
+++ b/client/src/components/footer/footer.css
@@ -3,6 +3,9 @@ footer{
     top: 55px;
     background-color:#232F3E;
     width: 100vw;
+    /* border: 2px solid red; */
+    left: -8px;
+    
 }
 
 footer .footer_container{
